Update BasicFollowService.java